<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="#7DCFB6">
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TiiTULO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Crear Cuenta 🐾"
            android:textColor="#1D4E89"
            android:textSize="24sp"
            android:textStyle="bold" />


        <!-- Campos requeridos nivel de usuario -->
        <EditText
            android:id="@+id/campoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoNombre"
            android:backgroundTint="#2196F3"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/campoCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoCorreo"
            android:backgroundTint="#2196F3"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/campoContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoContrasena"
            android:backgroundTint="#2196F3"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/campoContrasena1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoContrasena1"
            android:backgroundTint="#2196F3"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/campoNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoNombreMascota"
            android:backgroundTint="#2196F3"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F79256"
            android:text="Guardar"
            android:textColor="#1D4E89" />

        <!-- Campos requeridos nivel mascotas -->

        <!--
        <EditText
            android:id="@+id/etNombre"
            android:hint="Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/etTipo"
            android:hint="Tipo (Perro, gato, etc)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2DBA8E"
            android:text="Guardar" />
        -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>