<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DCFB6">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TÍTULO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acceso a tu cuenta 🐾"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#1D4E89"
            android:layout_marginBottom="20dp"/>

        <!-- CORREO -->
        <EditText
            android:id="@+id/correo_acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoCorreoAcceder"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:backgroundTint="#2196F3"/>

        <!-- CONTRASEÑA -->
        <EditText
            android:id="@+id/contrasena_acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoContrasenaAcceder"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:backgroundTint="#2196F3"
            android:inputType="textPassword"
            />

        <!-- BOTÓN -->
        <Button
            android:id="@+id/btn_acceder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_ingresar"
            android:backgroundTint="#F79256"
            android:textColor="#1D4E89"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>